--- a/proyectoImagemaker.API/Properties/launchSettings.json
+++ b/proyectoImagemaker.API/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "launchUrl": "proyectoImagemaker",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
