--- a/proyectoImagemaker.API/appsettings.json
+++ b/proyectoImagemaker.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+ "ConfiguracionesApp": {
+   "Token": "llave super secreta"
+ },
  "ConnectionStrings": {
   "ConexionPorDefecto": "Server=localhost;Database=proyectoImagemakerDB;User ID=sa;Password=123qweasd;"
  },
